correções e inicio ajuste swagger
